# devops_project

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-cd.yml  python-package-ci.yml  python-package.yml
docs/: operations.html  search.js
docs/operations/: Factorial.html
src/operations/: Factorial.py
test/operations/: test_factorial.py
