[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devopsproject_joao"
version = "0.0.1"
authors = [
  { name="João Cunha", email="jvmendescunha@gmail.com" },
]
description = "Projeto desenvolvido na disciplina de DevOps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jvmendescunha/devops_project"
"Bug Tracker" = "https://github.com/jvmendescunha/devops_project/issues"